catalog-service walking skeleton

--- a/catalog-service/src/main/resources/application.properties
+++ b/catalog-service/src/main/resources/application.properties
@@ -6,8 +6,10 @@ management.info.git.enabled=true
 management.info.git.mode=full
 
 spring.datasource.url=${CATALOG_DB_URL:jdbc:postgresql://localhost:15432/catalog_db}
-spring.datasource.username=${CATALOG_DB_USER:sujay}
+spring.datasource.username=${CATALOG_DB_USER}
 spring.datasource.password=${CATALOG_DB_PWD}
 
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=none
+
+catalog.page.size=5
