--- a/catalog-service/pom.xml
+++ b/catalog-service/pom.xml
@@ -20,6 +20,7 @@
     <properties>
         <java.version>21</java.version>
         <spotless.version>2.46.1</spotless.version>
+        <dockerImageName>jeppu/bookstore-${project.artifactId}</dockerImageName>
     </properties>
 
     <dependencies>
@@ -107,6 +108,10 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <image>
+                        <name>${dockerImageName}</name>
+                        <builder>dashaun/builder:tiny</builder>
+                    </image>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
