--- a/deployment/docker-compose/infra.yml
+++ b/deployment/docker-compose/infra.yml
@@ -24,7 +24,51 @@ services:
       retries: 5
       start_period: 10s
 
+  order-db:
+    container_name: order-db
+    image: postgres:16-alpine
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=postgres
+    ports:
+      - "25432:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres -d postgres" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+    restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          memory: 500m
+    volumes:
+      - "order_db_data:/var/lib/postgresql/data"
+      - ./order-db-init:/docker-entrypoint-initdb.d
+
+
+  bookstore-rabbitmq:
+    container_name: bookstore-rabbitmq
+    image: rabbitmq:3.12.11-management
+    environment:
+      - RABBITMQ_DEFAULT_USER=guest
+      - RABBITMQ_DEFAULT_PASS=guest
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    healthcheck:
+      test: rabbitmq-diagnostics check_port_connectivity
+      interval: 30s
+      timeout: 30s
+      retries: 10
+    deploy:
+      resources:
+        limits:
+          memory: 500m
+
 volumes:
   catalog_db_data:
-
+  order_db_data:
 
